# CraftAttempt

./: Cargo.toml  README.md
chunk/: Cargo.toml
chunk/src/: lib.rs
twinecraft/: Cargo.toml  outline.md
twinecraft/.cargo/: config
twinecraft/src/: camera.rs  main.rs  mod.rs  setup.rs  shader.wgsl  texture.rs  util.rs
