[package]
name = "twinecraft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#image = "0.23"
winit = "0.26"
winit_input_helper = "0.11"
cgmath = "0.18"
env_logger = {version = "0.9", default_features = false, features = ["termcolor", "atty", "humantime"]}
log = "0.4"
wgpu = "0.11"
pollster = "0.2"
bytemuck = { version = "1.7", features = [ "derive" ] }
noise = { version = "0.7", default_features = false, features = [] }

chunk = { path = "../chunk" }